@startuml

title __MINEACTIVITY's Class Diagram__\n

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.Change_Password {
          + ID : String
          + confirm : Button
          + newPassword : String
          + oldPassword : String
          + password1 : EditText
          + password2 : EditText
          + password3 : EditText
          + phone : String
          + reNewPassword : String
          - back_to_mine : ImageButton
          # onCreate()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.Change_Password.OnClick {
          + onClick()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.Change_Phone {
          + ID : String
          + Password : String
          + confirm : Button
          + newPhone : String
          + new_phone : EditText
          + password : EditText
          + phone : String
          - back_to_mine : ImageButton
          # onCreate()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.Change_Phone.OnClick {
          + onClick()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.Identity_Confirm {
          + ID : String
          + Name : String
          + Password : String
          + confirm : Button
          + idNumber : String
          + id_number : EditText
          + name : EditText
          + password : EditText
          + phone : String
          - back_to_mine : ImageButton
          # onCreate()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.Identity_Confirm.OnClick {
          + onClick()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.MyAttention {
          + flightList : List<Flight>
          + id : String
          + myAttentionsPlaneTicketList : List<PlaneTicket>
          + phone : String
          + planeTicketList : List<PlaneTicket>
          - back_to_mine : ImageButton
          # onCreate()
          - initAttention()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.MyAttentionAdapter {
          - mContext : Context
          - mFlightList : List<Flight>
          - mPhone : String
          - mPlaneTicket : List<PlaneTicket>
          - mmyAttentions : List<PlaneTicket>
          + MyAttentionAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.MyAttentionAdapter.ViewHolder {
          + air_company : TextView
          + attention : ImageButton
          + departure_terminal : TextView
          + flight_number : TextView
          + food : TextView
          + is_attentiond : int
          + is_bus : TextView
          + is_direct : TextView
          + is_share : TextView
          + landing_terminal : TextView
          + landing_time : TextView
          + order : Button
          + price : TextView
          + punctuality_rate : TextView
          + takeoff_time : TextView
          + time_period : TextView
          + ViewHolder()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.MyOrderActivity {
          + flightList : List<Flight>
          + id : String
          + myAttentionsPlaneTicketList : List<PlaneTicket>
          + myOrder : List<MyOrder>
          + phone : String
          + planeTicketList : List<PlaneTicket>
          + state : String
          - back_to_mine : ImageButton
          # onCreate()
          - initOrder()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.MyOrderAdapter {
          + myAttentionsPlaneTicketList : List<PlaneTicket>
          - mContext : Context
          - mFlightList : List<Flight>
          - mPhone : String
          - mPlaneTicket : List<PlaneTicket>
          - mState : String
          - myOrder : List<MyOrder>
          + MyOrderAdapter()
          + getItemCount()
          + onBindViewHolder()
          + onCreateViewHolder()
      }
    }
  }
  

  namespace com.sapphireStar.android_project {
    namespace MineActivity {
      class com.sapphireStar.android_project.MineActivity.MyOrderAdapter.ViewHolder {
          + air_company : TextView
          + attention : ImageButton
          + departure_terminal : TextView
          + flight_number : TextView
          + food : TextView
          + is_attentiond : int
          + is_bus : TextView
          + is_direct : TextView
          + is_share : TextView
          + landing_terminal : TextView
          + landing_time : TextView
          + order : Button
          + price : TextView
          + punctuality_rate : TextView
          + takeoff_time : TextView
          + time_period : TextView
          + ViewHolder()
      }
    }
  }
  

  com.sapphireStar.android_project.MineActivity.Change_Password -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.MineActivity.Change_Password +-down- com.sapphireStar.android_project.MineActivity.Change_Password.OnClick
  com.sapphireStar.android_project.MineActivity.Change_Password.OnClick .up.|> android.view.View.OnClickListener
  com.sapphireStar.android_project.MineActivity.Change_Phone -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.MineActivity.Change_Phone +-down- com.sapphireStar.android_project.MineActivity.Change_Phone.OnClick
  com.sapphireStar.android_project.MineActivity.Change_Phone.OnClick .up.|> android.view.View.OnClickListener
  com.sapphireStar.android_project.MineActivity.Identity_Confirm -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.MineActivity.Identity_Confirm +-down- com.sapphireStar.android_project.MineActivity.Identity_Confirm.OnClick
  com.sapphireStar.android_project.MineActivity.Identity_Confirm.OnClick .up.|> android.view.View.OnClickListener
  com.sapphireStar.android_project.MineActivity.MyAttention -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.MineActivity.MyAttentionAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.sapphireStar.android_project.MineActivity.MyAttentionAdapter +-down- com.sapphireStar.android_project.MineActivity.MyAttentionAdapter.ViewHolder
  com.sapphireStar.android_project.MineActivity.MyAttentionAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.sapphireStar.android_project.MineActivity.MyOrderActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.sapphireStar.android_project.MineActivity.MyOrderAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.sapphireStar.android_project.MineActivity.MyOrderAdapter +-down- com.sapphireStar.android_project.MineActivity.MyOrderAdapter.ViewHolder
  com.sapphireStar.android_project.MineActivity.MyOrderAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
